--- a/bila-tserkva/index.html
+++ b/bila-tserkva/index.html
@@ -143,7 +143,7 @@
       </div>
       </section>
       
-      <h4 class="ros">Склады Браницких</h4>
+      <h4 class="ros">Склади Браницьких</h4>
       <section>
         <div class="container-fluid">
           <div class="row">
