--- a/bila-tserkva/index.html
+++ b/bila-tserkva/index.html
@@ -65,22 +65,9 @@
             споруди, поширеної в країнах Далекого Сходу.</p>
         </div>
         <div class="col-lg-6 p-6">
-          В 1774 году польский король Август Станислав Понятовский получает в пожизненное владение от Речи Посполитой
-          тогда богатейшее на Украине Белоцерковское староство, которое 13 декабря того же года передает вместе со
-          зданиями в Варшаве великому коронному гетману Польши Францишеку Ксаверию Браницкому.
-          Эти земли Ксаверий Браницкий получил в награду за подавление ряда крестьянско-казацких восстаний — Колиивщины.
-          В его новые владения вошли также города Белая Церковь и Ставище, 134 села с населением свыше 40 тысяч человек.
-          С этих пор Белая Церковь становится частной собственностью графов Браницких
-          В 1781 году в Санкт-Петербурге гетман вступил в брак с любимой камер-фрейлиной императрицы Екатерины ІІ,
-          племянницей Светлейшего князя Григория Потёмкина, Александрой Васильевной Энгельгардт.
-          Брак Ф. К. Браницкого с А. В. Энгельгардт отвечал политическим реалиям того времени. Екатерина ІІ желала
-          стабильного мира с Польшей и поддерживала браки между русскими дворянами и польской шляхтой.
-          За Александрой гетман Браницкий получил приличное приданое — 600 000 рублей серебром и крупные земельные
-          владения.
-          Екатерина ІІ подарила супругам на свадьбу Шуваловский дворец в Петербурге. Доход К.
-          Браницкого от одной только Белой Церкви приносил 750 000 золотых, вместе с другими имениями Ставище, Рокитное,
-          Лисянка и другими доход составлял приблизительно 2 миллиона.
-        </div>
+          1774 року польський король Август Станіслав Понятовський отримав у довічне володіння від Речі Посполитої найбагатше тоді в Україні Білоцерківське староство, яке 13 грудня того ж року передав разом із будівлями у Варшаві великому коронному гетьману Польщі Францішеку Ксаверію Браницькому, герба Корчак. Ці землі Ксаверій Браницький отримав у нагороду за придушення хвилі селянсько-козацьких повстань — Коліївщини. До його нових володінь входили міста Біла Церква і Сквира, а також 134 села з населенням понад 40 тисяч чоловік. З цього часу Біла Церква стає приватним містом графів Браницьких.
+
+1781 року в Санкт-Петербурзі гетьман узяв шлюб з улюбленою камер-фрейліною імператриці Катерини II, племінницею Світлішого князя Григорія Потьомкіна, Олександрою Василівною Енгельгардт. Деякі історики вважають її позашлюбною донькою Катерини II й Сергія Салтикова. Шлюб Ф. К. Браницького з О. В. Енгельгардт відповідав політичним реаліям того часу. Катерина II бажала стабільного миру з Польщею і заохочувала шлюби між російськими дворянами і польською шляхтою. За О. Браницькою гетьман отримав пристойний посаг — 600 000 карбованців сріблом і велику ділянку землі. Катерина II подарувала подружжю на весілля Шуваловський палац у Петербурзі. Дохід К. Браницького з самої тільки Білої Церкви приносив 750 000 золотих. Разом із маєтками — Ставище, Рокитне, Лисянка та іншими він становив приблизно 2 мільйони.
         <div class="col-lg-6 wow animate__animated animate__fadeInRightBig"><img class="img"
             src="Китайський місток1.jpg" alt=""></div>
       </div>
